--- a/myfinance-web-dotnet/Views/PlanoConta/Index.cshtml
+++ b/myfinance-web-dotnet/Views/PlanoConta/Index.cshtml
@@ -26,8 +26,8 @@
                     <td>@item.Id</td>
                     <td>@item.Descricao</td>
                     <td>@item.Tipo</td>
-                    <td><button type="button" class="btn btn-warning">Editar</button></td>
-                    <td><button type="button" class="btn btn-danger">Excluir</button></td>
+                    <td><button type="button" class="btn btn-warning" onclick="Editar(@item.Id);">Editar</button></td>
+                    <td><button type="button" class="btn btn-danger" onclick="Excluir(@item.Id);">Excluir</button></td>
                 </tr>
                 
             }
@@ -38,4 +38,11 @@
     function Cadastrar(){
         window.location.href = "../PlanoConta/Cadastro"
     }
+    function Excluir(id){
+        window.location.href = "../PlanoConta/Excluir/"+id
+    }
+    function Editar(id){
+        window.location.href = "../PlanoConta/Cadastro/"+id
+    }
+
 </script>
