--- a/myfinance-web-dotnet/Views/Shared/_Layout.cshtml
+++ b/myfinance-web-dotnet/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PlanoConta" asp-action="Index">Plano de Contas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transacao" asp-action="Index">Transações</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -48,5 +51,18 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    @section Scripts {
+    <script>
+        $(function () {
+            $('#datepicker').datepicker({
+                format: 'dd/mm/yyyy', // Define o formato da data
+                autoclose: true, // Fecha o Date Picker automaticamente ao selecionar uma data
+                todayHighlight: true // Destaca a data atual
+                // Aqui você pode adicionar outras opções de configuração, se necessário
+            });
+        });
+    </script>
+}
 </body>
 </html>
